2007-11-10 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/rel_nl.py: inlaw children are allowed
	* src/Relationship.py: inlaw children are allowed

2007-11-10 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDbUtils/_WriteGrdb.py: missing parent in import
	* src/GrampsDbUtils/test/_GrampsDbWRFactories_test.py: added unittest
	The _WriteGrdb problem wasn't encountered until now, because the
	import is buried in a function (of_GrampsDbWRFactories)  that doesn't 
	always get exercised. A unit test was added to test the calling module
	by verifying those imports within functions.
	(belated CL entry for r9320 change made 11-07)


2007-11-10 Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/IndivComplete.py: added support for printing non-primary,
	non-family events.

2007-11-10 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: collapse inlaws
	* src/plugins/Ancestors.py: use new calling grandparent string
	* src/plugins/rel_nl.py: change to new API
	* src/plugins/rel_it.py: change comment
	* src/plugins/rel_pl.py: use old filter
	* src/Relationship.py: improvements, protected methods

2007-11-08 Benny Malengier <benny.malengier@gramps-project.org>
	* TODO: update
	* src/DisplayTabs/_EventEmbedList.py: catch managed window crash

2007-11-08 Stéphane Charette <stephanecharette@gmail.com>
	* src/DataViews/_RelationView.py: issue #1352
	* src/GrampsWidgets.py: issue #1352, include all siblings in
	relationship view, but make current person non-linkable

2007-11-07 Benny Malengier <benny.malengier@gramps-project.org>
	* src/AddMedia.py: fix issue #1350, relative path not working addmedia
	* src/Editors/_EditPerson.py: family rebuild callback error

2007-11-07 Benny Malengier <benny.malengier@gramps-project.org>
	* src/AddMedia.py: media crash, fix issue #1349, change unicode to Utils

2007-11-06 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: english issues